prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus
spec:
  ports:
    - port: 9090
      nodePort: 30877
  selector:
    app: prometheus
  type: LoadBalancer
