ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /metrics
    prometheus.io/port:   '80'
spec:
  rules:
    - host: grafana.local
      http:
        paths: 
          - pathType: Prefix
            path: /
            backend: 
              service:
                name: grafana-ip-service
                port:
                  number: 3000

    - host: prometheus.local
      http:
        paths:
          - pathType: Prefix 
            path: /
            backend: 
              service:
                name: prometheus-ip-service
                port:
                  number: 9090
